@@ -6,7 +6,9 @@ ryLabel: aggiunte le proprietà "align" e "color".
 
 ryDraw: aggiunto border a ryPie e gestito background in ryGram.
 
-ryScript: aggiunto il metodo "refresh".
+ryScript: aggiunto il metodo "refresh"; corretto il funzionamento dell'intellisense.
+
+ryUnbound: migliorato il comportamento dell'editmode.
 
 ==================================
 Rilascio 1.70.28    del 06/04/2016
